feat: Handle error state and improve loading indicator
Display an error state in the UI when the application encounters an error, and enhance the initial loading message to be more informative.

--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
 </script>
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Loading DiamondSearch AI...</div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
