--- a/index.html
+++ b/index.html
@@ -264,6 +264,12 @@
         50% { opacity: 0.5; }
       }
 
+      @keyframes sound-wave {
+        0% { height: 6px; }
+        50% { height: 24px; }
+        100% { height: 6px; }
+      }
+
       .visualizer-container {
         height: 3rem;
         display: flex;
@@ -278,7 +284,18 @@
         border-radius: 9999px;
         transition: height 0.1s;
         min-height: 4px;
+        height: 4px;
       }
+
+      .visualizer-bar.speaking {
+        animation: sound-wave 0.5s infinite ease-in-out;
+      }
+      
+      .visualizer-bar.speaking:nth-child(1) { animation-delay: 0.0s; }
+      .visualizer-bar.speaking:nth-child(2) { animation-delay: 0.1s; }
+      .visualizer-bar.speaking:nth-child(3) { animation-delay: 0.2s; }
+      .visualizer-bar.speaking:nth-child(4) { animation-delay: 0.1s; }
+      .visualizer-bar.speaking:nth-child(5) { animation-delay: 0.0s; }
 
       .controls-area {
         padding-bottom: 4rem;
