--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
         box-shadow: 0 4px 20px rgba(212, 175, 55, 0.2);
         position: relative;
         overflow: hidden;
+        z-index: 10;
+        pointer-events: auto;
       }
       .btn-luxury::after {
         content: '';
@@ -150,6 +152,8 @@
         cursor: pointer;
         transition: all 0.2s;
         backdrop-filter: blur(10px);
+        z-index: 10;
+        pointer-events: auto;
       }
       .btn-glass:hover {
         background: rgba(255, 255, 255, 0.1);
@@ -340,11 +344,23 @@
         0%, 100% { height: 6px; }
         50% { height: 24px; }
       }
+      @keyframes float {
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-10px); }
+      }
+      @keyframes fadeInUp {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+
       .v-bar:nth-child(1) { animation-delay: 0s; }
       .v-bar:nth-child(2) { animation-delay: 0.1s; }
       .v-bar:nth-child(3) { animation-delay: 0.2s; }
       .v-bar:nth-child(4) { animation-delay: 0.1s; }
       .v-bar:nth-child(5) { animation-delay: 0s; }
+
+      .anim-float { animation: float 6s ease-in-out infinite; }
+      .anim-fade-up { animation: fadeInUp 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards; opacity: 0; }
 
       .scroll-y { overflow-y: auto; scrollbar-width: none; }
       .scroll-y::-webkit-scrollbar { display: none; }
