--- a/index.html
+++ b/index.html
@@ -122,23 +122,39 @@
         z-index: 10;
         pointer-events: auto;
       }
-      .btn-luxury::after {
-        content: '';
-        position: absolute;
-        top: 0; left: 0; width: 100%; height: 100%;
-        background: linear-gradient(rgba(255,255,255,0.2), transparent);
-        opacity: 0;
-        transition: opacity 0.3s;
-      }
       .btn-luxury:hover {
         transform: translateY(-2px);
         box-shadow: 0 8px 30px rgba(212, 175, 55, 0.3);
       }
-      .btn-luxury:hover::after {
-        opacity: 1;
-      }
       .btn-luxury:active {
         transform: scale(0.98);
+      }
+
+      /* Hero Call Button */
+      .btn-call-hero {
+        width: 80px;
+        height: 80px;
+        background: var(--gold-gradient);
+        border-radius: 50%;
+        border: none;
+        color: #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.7);
+        animation: pulse-ring 2s infinite;
+        transition: all 0.3s ease;
+        z-index: 20;
+        pointer-events: auto;
+      }
+      .btn-call-hero:hover {
+        transform: scale(1.1);
+      }
+      .btn-call-hero svg {
+        width: 36px;
+        height: 36px;
+        fill: #000;
       }
 
       .btn-glass {
@@ -200,7 +216,7 @@
       .hero-image {
         width: 240px;
         height: 240px;
-        margin: 0 auto 3rem auto;
+        margin: 0 auto 1rem auto;
         position: relative;
         display: flex;
         align-items: center;
@@ -351,6 +367,11 @@
       @keyframes fadeInUp {
         from { opacity: 0; transform: translateY(20px); }
         to { opacity: 1; transform: translateY(0); }
+      }
+      @keyframes pulse-ring {
+        0% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.7); }
+        70% { transform: scale(1); box-shadow: 0 0 0 15px rgba(212, 175, 55, 0); }
+        100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(212, 175, 55, 0); }
       }
 
       .v-bar:nth-child(1) { animation-delay: 0s; }
